almost completely fixed the timing issues with the video. Changing the value of 'vdgclock' tweaks the flickering link in BugByte Chess

--- a/jsacorn.css
+++ b/jsacorn.css
@@ -63,7 +63,7 @@ body {
 #nec-tv-screen {
     position: absolute;
     z-index: -1;
-    top: 0px;
+    top: 32px;
     left: 0px;
     display: block;
     width: 830px;
